--- a/docs/assets/scss/_yb_image.scss
+++ b/docs/assets/scss/_yb_image.scss
@@ -40,3 +40,97 @@
     }
   }
 }
+
+body {
+  &.image-popped-up {
+    overflow: hidden;
+  }
+}
+
+p > img,
+.td-content > img:not(.icon) {
+  cursor: pointer;
+}
+
+.image-popup {
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 500ms ease;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+
+  &.open {
+    opacity: 1;
+    z-index: 9999;
+  }
+
+  .img-scroll {
+    width: auto;
+    background: #fff;
+    border-radius: 5px;
+    max-width: 90vw;
+    max-height: 90vh;
+    overflow: auto;
+    box-sizing: border-box;
+    position: relative;
+
+    img {
+      width: auto;
+      height: auto;
+      max-width: 90vw;
+      max-height: 90vh;
+
+      &[src*="svg"] {
+        width: 80vw;
+      }
+    }
+
+    i {
+      position: sticky;
+      width: 40px;
+      height: 40px;
+      margin: 0 0 -40px;
+      top: 5px;
+      left: calc(100% - 45px);
+      border-radius: 50%;
+      background: #fff;
+      z-index: 6;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: all 250ms ease;
+
+      &:hover {
+        background: #f1f1f1;
+      }
+
+      &::before,
+      &::after {
+        content: "";
+        width: 21px;
+        height: 1px;
+        background: #000;
+        position: absolute;
+        top: 20px;
+        left: 10px;
+        transform: rotate(45deg);
+      }
+
+      &::after {
+        transform: rotate(-45deg);
+      }
+    }
+  }
+
+  i.bg-drop {
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(2px);
+    cursor: pointer;
+  }
+}
