--- a/docs/layouts/partials/contribute_list.html
+++ b/docs/layouts/partials/contribute_list.html
@@ -15,6 +15,9 @@
         <a class="dropdown-item" href="/preview/contribute/docs/" title="Contributor guide" target="_blank" rel="noopener">
           Contributor guide
         </a>
+        <a class="dropdown-item" href="https://github.com/yugabyte/yugabyte-db/tree/master/docs/content/{{ .File.Path }}" title="Edit this page" target="_blank" rel="noopener">
+          Edit this page
+        </a>
       </div>
     </li>
   </ul>
