[PLAT-6559] Add create on prem provider form
Summary:
Changes
- Add support for creating on-prem provider using the new backend API
  - We submit all the provider details in one request rather than issuing
     separate calls for access key, region, and availability zone creation.
  - The backend support for this went in as part of this commit: 93b5672342a6ad66e268f37b155571d91d70b556
- Implement instance type and instance management as a separate provider tab
   - Previously the UI exposed instance type creation as part of the on-prem provider creation form.
      This diff consolidates all instance management activities to a separate provider details tab (exclusive to on-prem providers).
       Users will be able to view and manage their configured instance types and attached instances all in one place.
- Improve ntp server input experience
  - Add autocompletion by pulling the existing ntp servers from configured providers
  - Disable NTP field when submitting and in read-only mode

Additional fixes/improvements in this diff:
- Use dropdown menu for table actions to conserve row space
- Fix zone subtable styling and remove unused columns
- Add support for removing zone fields while user is constructing their form submission
- Fix empty zone case for aws/gcp/azu region submission
- Update AWS field text
- Fix data-testid capitalization typo
- Center the read-only forms

Test Plan:
Test case: Create on-prem provider form validation
- Verify that required fields are enforced.
{F35072}
Test case: Create on-prem provider
{F35033}{F35034}{F35037}{F35038}{F35039}
Test case: Create instance type for an on-prem provider
{F35040}{F35041}{F35042}
Test case: Delete instance type for an on-prem provider
{F35043}{F35044}{F35045}
Test case: Deleting an instance type should also update the instance type dropdown in the `Add instance` modal (without requiring a page reload)
{F35051}
Test case: Adding an instance type should also update the instance type dropdown in the `Add insta

--- a/managed/ui/src/components/configRedesign/providerRedesign/providerView/providerDetails/ProviderOverview.module.scss
+++ b/managed/ui/src/components/configRedesign/providerRedesign/providerView/providerDetails/ProviderOverview.module.scss
@@ -1,4 +1,4 @@
-@use '../../../../_style/colors.scss';
+@use '../../../../../_style/colors.scss';
 
 .providerOverviewContainer {
   display: flex;
@@ -17,10 +17,6 @@
     display: flex;
     gap: 80px;
   }
-}
-
-.regionMapContainer {
-  // background-color: #e9eef2;
 }
 
 .regionListContainer {
