--- a/managed/ui/src/components/configRedesign/providerRedesign/providerView/providerDetails/UniverseTable.module.scss
+++ b/managed/ui/src/components/configRedesign/providerRedesign/providerView/providerDetails/UniverseTable.module.scss
@@ -1,4 +1,4 @@
-@use '../../../../_style/colors.scss';
+@use '../../../../../_style/colors.scss';
 
 .bootstrapTableContainer {
   height: fit-content;
