Use markdown in explore cleanup

--- a/docs/layouts/shortcodes/explore-cleanup.html
+++ b/docs/layouts/shortcodes/explore-cleanup.html
@@ -1,3 +1,4 @@
+## Clean up
 
-<h2 id="clean-up">Clean up</h2>
-<p>You can shut down the local cluster by following the instructions provided in <a href="/preview/reference/configuration/yugabyted/#destroy-a-local-cluster">Destroy a local cluster</a>.</p>
+You can shut down the local cluster by following the instructions provided in [Destroy a local
+cluster](/preview/reference/configuration/yugabyted/#destroy-a-local-cluster).
