--- a/managed/ui/src/components/configRedesign/providerRedesign/components/YBDropZone/YBDropZone.module.scss
+++ b/managed/ui/src/components/configRedesign/providerRedesign/components/YBDropZone/YBDropZone.module.scss
@@ -41,7 +41,7 @@
 .acceptedFilesMetadataContainer {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   gap: 10px;
 
   padding: 14px;
