Make diagrams clickable

--- a/docs/assets/scss/_yb_image.scss
+++ b/docs/assets/scss/_yb_image.scss
@@ -6,9 +6,17 @@
     position: absolute;
     inset: 0;
 
-    .td-content p > code area {
+    @-moz-document url-prefix() {
+      position: static;
+    }
+
+    area {
       position: absolute;
       display: block;
+
+      @-moz-document url-prefix() {
+        position: static;
+      }
     }
   }
 }
