remove extra margin from diagram

--- a/docs/assets/scss/_yb_image.scss
+++ b/docs/assets/scss/_yb_image.scss
@@ -2,6 +2,10 @@
   display: inline-block;
   position: relative;
 
+  img {
+    margin: 0 !important;
+  }
+
   map {
     position: absolute;
     inset: 0;
