--- a/managed/ui/src/components/advanced/AdvancedConfig.scss
+++ b/managed/ui/src/components/advanced/AdvancedConfig.scss
@@ -27,7 +27,7 @@
     background-color: #fff;
 
     .dropdown-menu .active a {
-      color: #2B59C3;
+      color: #2b59c3;
     }
 
     .dropdown-toggle {
@@ -58,6 +58,7 @@
       list-style-type: none;
       text-overflow: ellipsis;
       overflow: auto;
+      max-width: 90%;
       white-space: nowrap;
     }
   }
