--- a/docs/assets/scss/_sidebar-tree.scss
+++ b/docs/assets/scss/_sidebar-tree.scss
@@ -26,15 +26,16 @@
 .td-main {
   aside.td-sidebar {
     position: sticky;
-    top: 112px;
+    top: 114px;
     padding: 0;
     background: #fff;
+    max-height: calc(100vh - 114px);
 
     .left-sidebar-wrap {
-      height: calc(100vh - 112px);
+      height: 100%;
       position: sticky;
       margin-top: 0;
-      top: 112px;
+      top: 0;
       transition: width 100ms ease-in-out;
       max-width: 100%;
 
@@ -46,7 +47,7 @@
 
     .left-sidebar-wrap-inner {
       position: sticky;
-      height: calc(100vh - 112px);
+      height: 100%;
       display: flex;
       flex-flow: column;
       overflow-x: hidden;
@@ -63,7 +64,7 @@
       justify-content: center;
       background-color: #fff;
       cursor: pointer;
-      top: 21px;
+      bottom: 40px;
       width: 30px;
       height: 30px;
       right: 16px;
@@ -125,11 +126,7 @@
         }
 
         &::after {
-          opacity: 1;
           content: "Show sidebar";
-          background: transparent;
-          border: 0 solid #e9edf0;
-          box-shadow: 0 0 0 rgba(0, 0, 0, 0.1);
           left: 35px;
         }
 
