Bottom to top button in right trail

--- a/docs/layouts/partials/toc.html
+++ b/docs/layouts/partials/toc.html
@@ -14,4 +14,7 @@
 {{ end }}
 {{ end }}
 {{ end }}
+<div class="scroll-to-top">
+  <button class="scrolltop-btn" aria-label="Click here to scroll to top"></button>
+</div>
 <script>if (!$.trim($('#TableOfContents').text())){$('aside.td-sidebar-toc .td-toc').remove();}</script>
