--- a/docs/assets/scss/_sidebar-toc.scss
+++ b/docs/assets/scss/_sidebar-toc.scss
@@ -4,22 +4,27 @@
 .td-sidebar-toc {
   @supports (position: sticky) {
     position: sticky;
-    overflow-y: auto;
     top: 129px;
     background: rgb(246, 246, 248);
     margin-top: 129px;
     max-height: calc(100vh - 129px);
     height: auto;
-    scrollbar-width: thin;
 
-    &::-webkit-scrollbar {
-      height: 5px;
-      width: 5px;
-    }
+    .td-toc {
+      max-height: calc(100vh - (129px + 80px));
+      height: auto;
+      scrollbar-width: thin;
+      overflow-y: auto;
 
-    &::-webkit-scrollbar-thumb {
-      background: #b7c3cb;
-      border-radius: 6px;
+      &::-webkit-scrollbar {
+        height: 5px;
+        width: 5px;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: #b7c3cb;
+        border-radius: 6px;
+      }
     }
   }
 
@@ -107,6 +112,63 @@
     &.hide-h4 {
       nav > ul > li > ul > li > ul {
         display: none;
+      }
+    }
+  }
+
+  .scroll-to-top {
+    bottom: 32px;
+    position: absolute;
+    left: 0;
+
+    @media (max-width: 1380px) {
+      left: -10px;
+    }
+
+    .scrolltop-btn,
+    .scrolltop-btn::before {
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      height: 40px;
+      transition: all 0.3s ease-out;
+      width: 40px;
+    }
+
+    .scrolltop-btn {
+      background: none;
+      border: none;
+      cursor: pointer;
+      opacity: 0;
+      outline: none;
+      padding: 0;
+      -webkit-transform: translateY(64px);
+      transform: translateY(64px);
+
+      &.btn-visible {
+        opacity: 1;
+        -webkit-transform: none;
+        transform: none;
+      }
+
+      &::before {
+        align-items: center;
+        background-image: url("/icons/bottom-to-top-arrow.svg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        content: "";
+        display: flex;
+        justify-content: center;
+        position: relative;
+      }
+
+      &:hover {
+        background: #7879f1;
+        -webkit-transform: translateY(-8px);
+        transform: translateY(-8px);
+
+        &::before {
+          background-image: url("/icons/bottom-to-top-arrow-hover.svg");
+        }
       }
     }
   }
